@@ -15,6 +15,7 @@ Release 0.20.3 - Unreleased
    HBASE-2033  Shell scan 'limit' is off by one
    HBASE-2034  [Bulk load tools] loadtable.rb calls an undefined method
                `descendingIterator' (Ching-Shen Chen via Stack)
+   HBASE-2043  Shell's scan broken
 
   IMPROVEMENTS
    HBASE-1961  HBase EC2 scripts
